// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput Component FileInput handle add file successfully through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file successfully through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <progress
            class="progress"
            max="100"
            value="50"
          />
          <svg
            aria-hidden="true"
            class="icon gds-loader size-1x spinner-icon"
            data-testid="TEST-ID-spinner"
            focusable="false"
            height="50"
            icon="fal,spinner"
            preserveAspectRatio="xMidYMid"
            role="img"
            style="background: transparent;"
            viewBox="0 0 100 100"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="transparent"
              r="30"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="10"
            >
              <animatetransform
                attributeName="transform"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                type="rotate"
                values="0 50 50;180 50 50;720 50 50"
              />
              <animate
                attributeName="stroke-dasharray"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                values="20 150; 150 20; 20 150"
              />
            </circle>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file successfully through input 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            hello.png
             (5 Bytes)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file unsucessfully through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              hello.png
               (5 Bytes)
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Internal Error
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file with timeout through input 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle add file with timeout through input 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              hello.png
               (5 Bytes)
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Timeout
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input highlight"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drag event for highlight 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop of file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop of file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            file1.pdf
          </div>
        </div>
        <div
          class="right"
        >
          <svg
            aria-hidden="true"
            class="icon gds-loader size-1x spinner-icon"
            data-testid="TEST-ID-spinner"
            focusable="false"
            height="50"
            icon="fal,spinner"
            preserveAspectRatio="xMidYMid"
            role="img"
            style="background: transparent;"
            viewBox="0 0 100 100"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="transparent"
              r="30"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="10"
            >
              <animatetransform
                attributeName="transform"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                type="rotate"
                values="0 50 50;180 50 50;720 50 50"
              />
              <animate
                attributeName="stroke-dasharray"
                dur="2s"
                keyTimes="0;0.5;1"
                repeatCount="indefinite"
                values="20 150; 150 20; 20 150"
              />
            </circle>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop without dataTransfer 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle drop without dataTransfer 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handle unsuccessfull add file when quota reached 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handle unsuccessfull add file when quota reached 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              hello.png
               (5 Bytes)
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            Quota exceeded: Maximum number of files reached
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles correctly deletion when no handler defined 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles correctly deletion when no handler defined 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles delete rejections of a file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles delete rejections of a file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download and delete of a file 3`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download without download callback 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput handles download without download callback 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          data-testid="TEST-ID"
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            AME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput renders 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    >
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
          >
            NAME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileInput Component FileInput renders without input value 1`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;

exports[`FileInput Component FileInput renders without input value 2`] = `
<div>
  <div
    class="field gds-file-input-container"
  >
    <div
      class="droparea"
      tabindex="0"
    >
      <label
        class="label"
      >
        Click or drag file to upload
        <input
          class="input"
          multiple=""
          type="file"
          value=""
        />
      </label>
    </div>
    <div
      class="gallery"
    />
  </div>
</div>
`;
